# gdkGBA_cg50

./: CMakeLists.txt  README.md  build.sh
src/: arm.c  arm.h  arm_block.c  arm_block.h  arm_jit.c  arm_jit.h  arm_mem.c  arm_mem.h  arm_shared.h  bench.c  bench.h  build_flags.h  code_block.c  code_block.h  dma.c  dma.h  extram.c  extram.h  gint_gba.c  gint_gba.h  io.c  io.h  main.c  mem_swizzle.h  rom_buffer.c  rom_buffer.h  save_file.c  save_file.h  sdl.c  sh4_emit.c  sh4_emit.h  sh4_jit.c  sh4_jit.h  sound.c  sound.h  thumb_block.c  thumb_block.h  thumb_jit.c  thumb_jit.h  timer.c  (+2 more)
tools/: gba_trim.py
